--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Build with Next.js
         env:
           NODE_ENV: production
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build && ${{ steps.detect-package-manager.outputs.runner }} next export
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
